--- a/references.bib
+++ b/references.bib
@@ -41,7 +41,7 @@ publisher={Blackwell}
   year={2017},
   publisher={University of Hawaii Press},
   volume={11},
-  pages={224–255},
+  pages={224-255},
   journal={Language Documentation and Conservation}
 }
 
@@ -69,7 +69,7 @@ publisher={Blackwell}
   year={2017},
   journal={Language Documentation \& Conservation},
   volume={11},
-  pages={305–324},
+  pages={305-324},
   publisher={University of Hawaii Press}
 }
 
@@ -231,6 +231,34 @@ publisher={Blackwell}
   year={2016},
   publisher={De Gruyter}
 }
+
+@inproceedings{yarowsky2001inducing,
+  title={Inducing multilingual text analysis tools via robust projection across aligned corpora},
+  author={Yarowsky, David and Ngai, Grace and Wicentowski, Richard},
+  booktitle={Proceedings of the first international conference on Human language technology research},
+  pages={1--8},
+  year={2001},
+  organization={Association for Computational Linguistics}
+}
+
+
+@inproceedings{bender2002grammar,
+  title={The grammar matrix: An open-source starter-kit for the rapid development of cross-linguistically consistent broad-coverage precision grammars},
+  author={Bender, Emily M and Flickinger, Dan and Oepen, Stephan},
+  booktitle={Proceedings of the 2002 workshop on Grammar engineering and evaluation-Volume 15},
+  pages={1--7},
+  year={2002},
+  organization={Association for Computational Linguistics}
+}
+
+@article{drellishak2005coordination,
+  title={Coordination Modules for a Crosslinguistic Grammar Resource},
+  author={Drellishak, Scott and Bender, Emily M},
+  journal={D epartam ento de Inform {\'a}tica Facu ld ad ede C i{\^e}ncias da U niversid ad ede L isb oa C am po G rande, 1749--016 L isboa Portu gal},
+  pages={29},
+  year={2005}
+}
+
 
 @article{kay1997proper,
   title={The proper place of men and machines in language translation},
@@ -696,6 +724,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
 }
 
 
+
 @inproceedings{agic2015if,
  title={If all you have is a bit of the {Bible}: Learning {POS} taggers for truly low-resource languages},
  author={Agi{\'c}, {\v{Z}}eljko and Hovy, Dirk and S{\o}gaard, Anders},
@@ -946,7 +975,7 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  location={Osaka},
  publisher={Endangered Languages of the Pacific Rim Project},
  journal={2nd International Conference on Endangered Languages of the Pacific Rim, Kyoto, Japan.},
- date={November 30 – December 2, 2001}
+ date={November 30 - December 2, 2001}
 }
 
 @article{krauss92,
@@ -1018,6 +1047,13 @@ eprint = {https://doi.org/10.1080/10848770.2013.804729}
  booktitle={LREC},
  pages={3603--3610},
  year={2012}
+}
+
+@book{bird2009natural,
+  title={Natural language processing with Python: analyzing text with the natural language toolkit},
+  author={Bird, Steven and Klein, Ewan and Loper, Edward},
+  year={2009},
+  publisher={" O'Reilly Media, Inc."}
 }
 
 @inproceedings{bird2006nltk,
